--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
 	        <artifactId>junit-jupiter-engine</artifactId>
 	        <scope>test</scope>
    		 </dependency>	
+   		 
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator-annotation-processor</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
